<resources>
    <string name="app_name">Laundry Mart</string>
    <!--    main activity-->
    <string name="welcome_information">Your convenient laundry solution at your fingertips.Tap "Get Started" to experience quick, clean, and hassle-free laundry services.</string>
    <string name="welcome">Welcome to Laundry Mart!</string>
    <string name="get_start">Let"s Go</string>
    <!--    login-->
    <string name="welcome_back">Login In</string>
    <string name="login_instruction">Enter your credentials to login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_prompt">Don t have an account? Sign Up</string>
    <string name="welcome_info">Welcome to The Laundry Mart</string>
    <string name="already_have_an_account">Already have an account?</string>


    <string name="signup_title">Sign up</string>
    <string name="signup_instruction">Create your account</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup">Sign up</string>


    <string name="forgot_passw">Forgot Password</string>
    <string name="email_enter">Enter your registered email to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_your_email_and_new_password">Enter your email and new password</string>

</resources>