<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.sign_up">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/signup_instruction"
            android:layout_width="154dp"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup_instruction"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signup_title"
            app:layout_constraintTop_toBottomOf="@+id/signup_title" />

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_input"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/username_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_instruction" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_input"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_username" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_input"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_email" />

        <EditText
            android:id="@+id/signup_confirm_password"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_input"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_password" />


        <Button
            android:id="@+id/signup_button"
            android:layout_width="342dp"
            android:layout_height="57dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/purple"
            android:padding="12dp"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="84dp"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_button"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="56dp"
            android:layout_height="22dp"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.261"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>