<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/backg_welcome_page"
    android:layout_height="match_parent"
    tools:context=".splash_screen">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="343dp"
        android:layout_height="322dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/splash_screen_washingmachine" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/Deep_Navy_Blue"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/animation_view"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="@+id/animation_view"
        app:layout_constraintTop_toBottomOf="@+id/animation_view" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="333dp"
        android:layout_height="93dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/amethysta"
        android:text="@string/welcome_information"
        android:textColor="@color/Deep_Navy_Blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/letsgo"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/button_bg_welcome"
        android:backgroundTint="@color/Deep_Navy_Blue"
        android:text="@string/get_start"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>